SERVER-55181 Update the checks in NamespaceString::isNamespaceAlwaysUnsharded